--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,4 +1,5 @@
-FROM --platform=$TARGETPLATFORM alpine:3.21 as smartdns-builder
+FROM --platform=$TARGETPLATFORM alpine:3.22 as smartdns-builder
+# alpine 3.22 自带openssl 3.5.0
 LABEL previous-stage=smartdns
 # 添加标签，镜像生成后可使用 docker rmi `docker images --filter label=previous-stage=smartdns -q` 删除中间层
 COPY . /smartdns/
@@ -12,9 +13,7 @@ RUN apk update && \
     mkdir -p /release/etc/smartdns/ && \
     cp /smartdns/src/smartdns /release/usr/sbin/
 
-FROM --platform=$TARGETPLATFORM alpine:3.21
-# FROM scratch
-# 如果有进入镜像操作的必要，可以使用 busybox:musl 或 alpine。建议根据主机其他容器情况共用基础镜像
+FROM --platform=$TARGETPLATFORM alpine:3.22
 ENV TZ="Asia/Shanghai"
 COPY --from=smartdns-builder /release/ /
 EXPOSE 53/udp 53/tcp
