add for edns ipk

--- a/.github/workflows/deploy-docker-ui.yml
+++ b/.github/workflows/deploy-docker-ui.yml
@@ -152,6 +152,25 @@ jobs:
           cd ${{ github.workspace }}/package/openwrt
           chmod +x make_openwrt_withui.sh
           ./make_openwrt_withui.sh -o ${{ github.workspace }}/build --arch all --filearch $GOARCH --ver ${{needs.get-version.outputs.CUR_VERSION}}
+      - name: release ipk with edns
+        run: |
+          cd ${{ github.workspace }}
+          rm docker-openssl.sh || true
+          cat >> docker-openssl.sh << EOF
+          apk add perl make coreutils tar pkgconfig dpkg binutils
+          cd /workdir
+          export CFLAGS="-I /workdir/openssl/include -DFEATURE_CHECK_EDNS"
+          export LDFLAGS="-L /workdir/openssl"
+          ./package/build-pkg.sh --platform linux --arch all --filearch $GOARCH-linux-edns --outputdir /workdir/build
+          EOF
+          if  test "$GOARCH" = "armv7" ;then
+            docker run -i --rm -v ${{ github.workspace }}:/workdir muslcc/x86_64:armv7l-linux-musleabihf sh /workdir/docker-openssl.sh
+          else
+            docker run -i --rm -v ${{ github.workspace }}:/workdir muslcc/x86_64:$GOARCH-linux-musl sh /workdir/docker-openssl.sh
+          fi
+          cd ${{ github.workspace }}/package/openwrt
+          chmod +x make_openwrt_withui.sh
+          ./make_openwrt_withui.sh -o ${{ github.workspace }}/build --arch all --filearch $GOARCH-edns --ver ${{needs.get-version.outputs.CUR_VERSION}}
       - name: general tag and release ipk
         id: tag
         run: |
