--- a/.github/workflows/test-new.yml
+++ b/.github/workflows/test-new.yml
@@ -168,32 +168,32 @@ jobs:
           files: |
             ${{ github.workspace }}/build/*
 
-  update-version:
-    if: ((github.event_name=='workflow_dispatch' && github.event.inputs.update-version-number=='true') || github.event_name=='push')
-    name: update latest version number
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        ref: VERSION_CONTROL
-        fetch-depth: 1
-        path: version_control
-    - name: update version
-      run: |
-          #更新当前版本号
-          cd version_control
-          pre_version=$(cat VERSION | grep "PREFEX" | sed 's/PREFEX=\(.*\)/\1/')
-          cur_version=$(cat VERSION | grep "CUR_VERS" | sed 's/CUR_VERS=\(.*\)/\1/')
-          cur_version=$(($cur_version + 1))
-          sed -i "s/CUR_VERS=.*/CUR_VERS=$cur_version/" VERSION
-          git config --local user.email "fake@mail.com"
-          git config --local user.name "PikuZheng"
-          git add VERSION
-          git commit -m "generate new post from github action" -a
-    - name: push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: VERSION_CONTROL
-        directory: ./version_control
+  # update-version:
+  #   if: ((github.event_name=='workflow_dispatch' && github.event.inputs.update-version-number=='true') || github.event_name=='push')
+  #   name: update latest version number
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #     with:
+  #       ref: VERSION_CONTROL
+  #       fetch-depth: 1
+  #       path: version_control
+  #   - name: update version
+  #     run: |
+  #         #更新当前版本号
+  #         cd version_control
+  #         pre_version=$(cat VERSION | grep "PREFEX" | sed 's/PREFEX=\(.*\)/\1/')
+  #         cur_version=$(cat VERSION | grep "CUR_VERS" | sed 's/CUR_VERS=\(.*\)/\1/')
+  #         cur_version=$(($cur_version + 1))
+  #         sed -i "s/CUR_VERS=.*/CUR_VERS=$cur_version/" VERSION
+  #         git config --local user.email "fake@mail.com"
+  #         git config --local user.name "PikuZheng"
+  #         git add VERSION
+  #         git commit -m "generate new post from github action" -a
+  #   - name: push changes
+  #     uses: ad-m/github-push-action@master
+  #     with:
+  #       github_token: ${{ secrets.GITHUB_TOKEN }}
+  #       branch: VERSION_CONTROL
+  #       directory: ./version_control
