--- a/.github/workflows/test-new.yml
+++ b/.github/workflows/test-new.yml
@@ -32,7 +32,7 @@ jobs:
   #         echo "CUR_VERSION=$pre_version$cur_version" >> $GITHUB_OUTPUT
 
   build:
-    needs: get-version
+    # needs: get-version
     strategy:
       matrix:
         goarch: [aarch64]
