--- a/.github/workflows/test-new.yml
+++ b/.github/workflows/test-new.yml
@@ -123,7 +123,7 @@ jobs:
             ${{ github.workspace }}/build/*
 
   build-luci:
-    needs: get-version
+    # needs: get-version
     strategy:
       matrix:
         goarch: [luci, luci-compat, luci-lite]
