--- a/.github/workflows/test-new.yml
+++ b/.github/workflows/test-new.yml
@@ -120,8 +120,8 @@ jobs:
       #   with:
       #     tag_name: ${{ steps.tag.outputs.release_tag }}
       #     body_path: release.txt
-      #     files: |
-            ${{ github.workspace }}/build/*
+          # files: |
+            # ${{ github.workspace }}/build/*
 
   # build-luci:
   #   # needs: get-version
