--- a/.github/workflows/test-new.yml
+++ b/.github/workflows/test-new.yml
@@ -12,30 +12,27 @@ on:
         required: false
         default: 'false'
 jobs:
-  # get-version:
-  #   name: get latest version number
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     CUR_VERSION: ${{steps.get-version.outputs.CUR_VERSION}}
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #     with:
-  #       ref: VERSION_CONTROL
-  #       fetch-depth: 1
-  #       path: version_control
-  #   - name: get version
-  #     id: get-version
-  #     run: |
-  #         #获取当前版本号
-  #         pre_version=$(cat version_control/VERSION | grep "PREFEX" | sed 's/PREFEX=\(.*\)/\1/')
-  #         cur_version=$(cat version_control/VERSION | grep "CUR_VERS" | sed 's/CUR_VERS=\(.*\)/\1/')
-  #         echo "CUR_VERSION=$pre_version$cur_version" >> $GITHUB_OUTPUT
+  get-version:
+    name: get latest version number
+    runs-on: ubuntu-latest
+    outputs:
+      CUR_VERSION: ${{steps.get-version.outputs.CUR_VERSION}}
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        ref: VERSION_CONTROL
+        fetch-depth: 1
+        path: version_control
+    - name: get version
+      id: get-version
+      run: |
+          echo "CUR_VERSION=$(date +"1.%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
 
   build:
-    # needs: get-version
+    needs: get-version
     strategy:
       matrix:
-        goarch: [aarch64]
+        goarch: [x86_64, aarch64, armv7l]
       fail-fast: false
     runs-on: ubuntu-latest
     env:
@@ -97,104 +94,76 @@ jobs:
             sed -i 's|^export STRIP.*|export STRIP=/$GOARCH-linux-musl/bin/strip|' ./package/build-pkg.sh
             docker run -i --rm -v ${{ github.workspace }}:/workdir muslcc/x86_64:$GOARCH-linux-musl sh /workdir/docker-build.sh
           fi
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+      
+      - name: Generate release tag
+        id: tag
+        run: |
+          echo "release_tag=${{needs.get-version.outputs.CUR_VERSION}}" >> $GITHUB_OUTPUT
+          touch release.txt
+          echo ${{ github.sha }} >> Release.txt
+          echo "status=success" >> $GITHUB_OUTPUT
+          
+      - name: Upload firmware to release
+        uses: softprops/action-gh-release@v1
+        if: steps.tag.outputs.status == 'success'
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_WRT }}
         with:
-          name: "FFFF"
-          path: |
+          tag_name: ${{ steps.tag.outputs.release_tag }}
+          body_path: release.txt
+          files: |
             ${{ github.workspace }}/build/*
 
-      # - name: Generate release tag
-      #   id: tag
-      #   run: |
-      #     echo "release_tag=${{needs.get-version.outputs.CUR_VERSION}}" >> $GITHUB_OUTPUT
-      #     touch release.txt
-      #     echo "同步更新上游代码" >> release.txt
-      #     echo ${{ github.sha }} >> Release.txt
-      #     echo "status=success" >> $GITHUB_OUTPUT
-      # - name: Upload firmware to release
-      #   uses: softprops/action-gh-release@v1
-      #   if: steps.tag.outputs.status == 'success'
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.WRT_TOKEN }}
+      # - name: Upload artifacts
+      #   uses: actions/upload-artifact@v4
       #   with:
-      #     tag_name: ${{ steps.tag.outputs.release_tag }}
-      #     body_path: release.txt
-          # files: |
-            # ${{ github.workspace }}/build/*
+      #     name: "FFFF"
+      #     path: |
+      #       ${{ github.workspace }}/build/*
 
-  # build-luci:
-  #   # needs: get-version
-  #   strategy:
-  #     matrix:
-  #       goarch: [luci, luci-compat, luci-lite]
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     GOARCH: ${{ matrix.goarch }}
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Build luci
-  #       continue-on-error: true
-  #       run: |
-  #         sudo apt install -y rename
-  #         sudo timedatectl set-timezone "Asia/Shanghai"
-  #         cd ${{ github.workspace }}
-  #         mkdir -p ${{ github.workspace }}/build
-  #         #修改版本号
-  #         sed -i "s/VER=.*/VER=${{needs.get-version.outputs.CUR_VERSION}}/" package/build-pkg.sh
-  #         #单独编译luci和luci-compat
-  #         ./package/build-pkg.sh --platform $GOARCH --arch all --filearch $GOARCH-all --outputdir ${{ github.workspace }}/build
+
+  build-luci:
+    needs: get-version
+    strategy:
+      matrix:
+        goarch: [luci, luci-compat, luci-lite]
+    runs-on: ubuntu-latest
+    env:
+      GOARCH: ${{ matrix.goarch }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build luci
+        continue-on-error: true
+        run: |
+          sudo apt install -y rename
+          sudo timedatectl set-timezone "Asia/Shanghai"
+          cd ${{ github.workspace }}
+          mkdir -p ${{ github.workspace }}/build
+          #修改版本号
+          sed -i "s/VER=.*/VER=${{needs.get-version.outputs.CUR_VERSION}}/" package/build-pkg.sh
+          #单独编译luci和luci-compat
+          ./package/build-pkg.sh --platform $GOARCH --arch all --filearch $GOARCH-all --outputdir ${{ github.workspace }}/build
 
 #      - name: Upload To Artifact
 #        uses: actions/upload-artifact@v2
 #        with:
 #          path: ${{ github.workspace }}/build/
 
-      # - name: Generate release tag
-      #   id: tag
-      #   run: |
-      #     echo "release_tag=${{needs.get-version.outputs.CUR_VERSION}}" >> $GITHUB_OUTPUT
-      #     touch release.txt
-      #     echo "同步更新上游代码" >> release.txt
-      #     echo ${{ github.sha }} >> Release.txt
-      #     echo "status=success" >> $GITHUB_OUTPUT
-      # - name: Upload firmware to release
-      #   uses: softprops/action-gh-release@v1
-      #   if: steps.tag.outputs.status == 'success'
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
-      #   with:
-      #     tag_name: ${{ steps.tag.outputs.release_tag }}
-      #     body_path: release.txt
-      #     files: |
-      #       ${{ github.workspace }}/build/*
+      - name: Generate release tag
+        id: tag
+        run: |
+          echo "release_tag=${{needs.get-version.outputs.CUR_VERSION}}" >> $GITHUB_OUTPUT
+          touch release.txt
+          echo ${{ github.sha }} >> Release.txt
+          echo "status=success" >> $GITHUB_OUTPUT
 
-  # update-version:
-  #   if: ((github.event_name=='workflow_dispatch' && github.event.inputs.update-version-number=='true') || github.event_name=='push')
-  #   name: update latest version number
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #     with:
-  #       ref: VERSION_CONTROL
-  #       fetch-depth: 1
-  #       path: version_control
-  #   - name: update version
-  #     run: |
-  #         #更新当前版本号
-  #         cd version_control
-  #         pre_version=$(cat VERSION | grep "PREFEX" | sed 's/PREFEX=\(.*\)/\1/')
-  #         cur_version=$(cat VERSION | grep "CUR_VERS" | sed 's/CUR_VERS=\(.*\)/\1/')
-  #         cur_version=$(($cur_version + 1))
-  #         sed -i "s/CUR_VERS=.*/CUR_VERS=$cur_version/" VERSION
-  #         git config --local user.email "fake@mail.com"
-  #         git config --local user.name "PikuZheng"
-  #         git add VERSION
-  #         git commit -m "generate new post from github action" -a
-  #   - name: push changes
-  #     uses: ad-m/github-push-action@master
-  #     with:
-  #       github_token: ${{ secrets.GITHUB_TOKEN }}
-  #       branch: VERSION_CONTROL
-  #       directory: ./version_control
+      - name: Upload firmware to release
+        uses: softprops/action-gh-release@v1
+        if: steps.tag.outputs.status == 'success'
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_WRT }}
+        with:
+          tag_name: ${{ steps.tag.outputs.release_tag }}
+          body_path: release.txt
+          files: |
+            ${{ github.workspace }}/build/*
