--- a/.github/workflows/without_ui.yml
+++ b/.github/workflows/without_ui.yml
@@ -1,9 +1,9 @@
 name: Test Build (new)
 
 on:
-  push:
-    branches:
-      - master
+  # push:
+    # branches:
+      # - master
 #  pull_request:
   workflow_dispatch:
     inputs:
