fix so file patch

--- a/.github/workflows/deploy-docker-ui.yml
+++ b/.github/workflows/deploy-docker-ui.yml
@@ -161,19 +161,20 @@ jobs:
           cp ${{ github.workspace }}/etc/smartdns/smartdns.conf ./etc/smartdns/
           mkdir etc/default -p
           cp ${{ github.workspace }}/etc/default/smartdns ./etc/default/
+          echo 'LD_LIBRARY_PATH=/usr/local/lib/smartdns:/usr/lib:/lib' >> ./etc/default/smartdns
           mkdir lib/systemd/system -p
           cp ${{ github.workspace }}/systemd/smartdns.service ./lib/systemd/system/
           mkdir usr/local/lib/smartdns -p
-          cp ${{ github.workspace }}/openssl/libcrypto.so ./usr/local/lib/smartdns/
-          cp ${{ github.workspace }}/openssl/libssl.so ./usr/local/lib/smartdns/
+          cp ${{ github.workspace }}/openssl/libcrypto.so ./usr/local/lib/smartdns/libcrypto.so.3
+          cp ${{ github.workspace }}/openssl/libssl.so ./usr/local/lib/smartdns/libssl.so.3
           cp ${{ github.workspace }}/plugin/smartdns-ui/libsmartdns_ui.so ./usr/local/lib/smartdns/smartdns_ui.so
-          cp ${{ github.workspace }}/plugin/smartdns-ui/libgcc_s.so.1 ./usr/local/lib/smartdns/
           mkdir usr/share/smartdns/wwwroot -p
           cp -a ${{ github.workspace }}/smartdns-webui/out/* ./usr/share/smartdns/wwwroot/
           sed -i "s/Version:.*/Version: ${{needs.get-version.outputs.CUR_VERSION}}/" ./DEBIAN/control
           sed -i "s/Architecture:.*/Architecture: all/" ./DEBIAN/control
+          sed -i '/^Depends:/ {s/$/, musl/;b}; /^Package:/a Depends: musl' ./DEBIAN/debian/control
           chmod 0755 ./DEBIAN/prerm || true
-          dpkg -b ${{ github.workspace }}/package/debian ${{ github.workspace }}/build/smartdns.${{needs.get-version.outputs.CUR_VERSION}}.$GOARCH.deb
+          dpkg -b ${{ github.workspace }}/package/debian ${{ github.workspace }}/build/smartdns_with_ui.${{needs.get-version.outputs.CUR_VERSION}}.$GOARCH.deb
       - name: release ipk with edns
         run: |
           cd ${{ github.workspace }}
@@ -199,7 +200,7 @@ jobs:
           rm usr/sbin/smartdns || true
           cp ${{ github.workspace }}/src/smartdns usr/sbin/
           chmod +x usr/sbin/smartdns || true
-          dpkg -b ${{ github.workspace }}/package/debian ${{ github.workspace }}/build/smartdns.${{needs.get-version.outputs.CUR_VERSION}}.$GOARCH-edns.deb
+          dpkg -b ${{ github.workspace }}/package/debian ${{ github.workspace }}/build/smartdns_with_ui.${{needs.get-version.outputs.CUR_VERSION}}.$GOARCH-edns.deb
       - name: general tag and release ipk
         id: tag
         run: |
